# pomodoro-focus

./: CODE_ARCHITECTURE.md  README.md  USER_GUIDE.md  prompt-template.md
chrome-extension/: background.js  blocked.html  manifest.json
safari-extension-src/: background.js  blocked.js  manifest.json
safari-extension/番茄专注/Shared (App)/: ViewController.swift
safari-extension/番茄专注/Shared (App)/Resources/: Script.js
safari-extension/番茄专注/Shared (App)/Resources/Base.lproj/: Main.html
safari-extension/番茄专注/Shared (Extension)/: SafariWebExtensionHandler.swift
safari-extension/番茄专注/Shared (Extension)/Resources/: blocked.css
safari-extension/番茄专注/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
safari-extension/番茄专注/macOS (App)/: AppDelegate.swift
safari-extension/番茄专注/macOS (App)/Base.lproj/: Main.storyboard
safari-extension/番茄专注/番茄专注.xcodeproj/: project.pbxproj
safari-extension/番茄专注/番茄专注.xcodeproj/project.xcworkspace/xcuserdata/chenyuhang.xcuserdatad/: UserInterfaceState.xcuserstate
src/: index.html  overlay.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  state.rs
src-tauri/src/commands/: apps.rs  blocker.rs  config.rs  mod.rs  sites.rs  timer.rs
src-tauri/src/models/: config.rs  mod.rs  timer.rs
src-tauri/src/services/: app_blocker.rs  local_server.rs  mod.rs  scheduler.rs  site_blocker.rs
src/js/: api.js  app.js  settings.js  timer.js  utils.js
src/styles/: main.css  settings.css  timer.css
(+1 files in other folders)
