[package]
name = "pomodoro-focus"
version = "0.1.0"
description = "A Pomodoro Focus Timer App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
chrono = "0.4"
dirs = "5"
log = "0.4"
tiny_http = "0.12"
plist = "1"
base64 = "0.22"
tauri-plugin-dialog = "2"
